# machine_learning

./: README.md  pyproject.toml  test.ipynb  utils.py
01 Simple Linear Regression/: SLR.ipynb
02 Multiple Linear Regression/: MLR.ipynb
03 Feature Engineering/: FeatureEngg.ipynb  model.joblib
04 Automated Preprocessing/: Pipelines.ipynb  model.joblib
05 Feature Selection/: Backward.ipynb  Forward.ipynb  backward_model.joblib  backward_pre.joblib  forward_model.joblib  forward_pre.joblib
06 Regularization/: Regularization.ipynb  pre.joblib  ridge.joblib
07 Regression Project/: Project.ipynb  house_price_model.joblib  pre.joblib
08 Logistic Regression/: Logistic.ipynb  iris_model.joblib  pre.joblib
09 Decision Tree Classification/: DTC.ipynb  drugs_model.joblib  pre.joblib
10 Decision Tree Regression/: DTR.ipynb  DTR_Results.csv  dtr_model.joblib  pre.joblib
11 Ensemble Technique/: Ensemble .ipynb  pre.joblib  xgb_model.joblib
12 SVM and KNN/: SVM and KNN.ipynb  pre.joblib  svc.joblib  svc_results.csv
13 Algorithm Evaluation/: Algorithm Evaluation.ipynb
14 Clustering/: Clustering.ipynb
15 Classification Project/: Classification.ipynb  machine_model.joblib  pre.joblib
